feat: public package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "LICENSE",
     "README.md"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
+  },
   "scripts": {
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
